# frameplayer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile_backup  README.md  SDL_Player.cpp  SDL_Player.h  SDL_Player_events.cpp  codec.cpp  codec.h  format.cpp  format.h  frame.h  main.cpp  main_backup  memory  packet.cpp  packet.h  player  sdlscreen.cpp  sdlscreen.h  stream.cpp  stream.h  swscaler.cpp  swscaler.h  timer.cpp  timer.h  utils.h
extern_src/: Makefile  YUV420P_Player.cpp  YUV420P_Player.h
